--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "@types/react": "~18.0.0",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.69.1",
-    "expo": "~46.0.16",
-    "expo-status-bar": "~1.4.0",
+    "expo": "^49.0.0",
+    "expo-status-bar": "~1.6.0",
     "firebase": "9.6.7",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-reanimated": "^2.11.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react": "18.2.0",
+    "react-native": "0.72.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
-    "typescript": "^4.6.3"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
