--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -18,12 +19,14 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "9.6.7",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.19.6",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
